--- a/style/fonts/Lato.css
+++ b/style/fonts/Lato.css
@@ -2,5 +2,5 @@
   font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url('Lato.woff') format('woff');
+  src: local('Lato Regular'), local('Lato-Regular'), url('http://2016.igem.org/wiki/images/a/a5/Team-leiden-style-fonts-lato.woff') format('woff');
 }
