--- a/style/main.css
+++ b/style/main.css
@@ -12,7 +12,7 @@ html, body {
   z-index: 1000;
   background-color: rgba(0,0,0,0);
   height: 800px;
-  padding-top: 260px;
+  padding-top: 240px;
 }
 
 .container-fluid {
@@ -95,10 +95,14 @@ footer .glyphicon {
     color: rgb(226, 130, 81);
 }
 
-body {
+#HQ_page p {
   font: 400 15px Lato, sans-serif;
-  line-height: 1.8;
-  color: #818181;
+  line-height: 1.5;
+  color: rgb(51, 51, 51);
+}
+
+#bodyContent {
+  margin-top: -10px;
 }
 
 h2 {
@@ -143,13 +147,10 @@ h4 {
   color: rgb(226, 130, 81);
 }
 
-.jumbotron {
-
-}
-
 #header-background {
-  background-image: url('../images/header.png');
+  background-image: url('http://2016.igem.org/wiki/images/7/70/Team-Leiden-images-header.png');
   height: 800px;
+  background-size: cover;
   width: 100%;
   position: fixed;
   top: 0px;
