--- a/style/main.css
+++ b/style/main.css
@@ -161,3 +161,42 @@ h4 {
 .jumbotron a {
   color: white;
 }
+
+.cf {
+  position:relative;
+  height:50px;
+  width:50px;
+  margin:0 auto;
+}
+
+.cf img {
+  position:absolute;
+  left:0;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+.cf img.top:hover {
+  opacity:0;
+}
+.dropdown-content {
+    display: none;
+    position: relative;
+	background-color: #f9f9f9;
+    right: 0;
+    
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: }
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
