--- a/style/main.css
+++ b/style/main.css
@@ -15,6 +15,15 @@ html, body {
   padding-top: 240px;
 }
 
+.jumbotron p{
+	font-size: 100px; 
+	color: white; 
+	text-align: center; 
+	font-family: Montserrat, sans-serif; 
+	font-weight: normal; 
+	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;'
+}
+
 .container-fluid {
   padding: 60px 50px;
 }
