--- a/style/main.css
+++ b/style/main.css
@@ -21,7 +21,7 @@ html, body {
 	text-align: center; 
 	font-family: Montserrat, sans-serif; 
 	font-weight: normal; 
-	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;'
+	text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black, 2px 2px black, 2px -2px black, -2px -2px black, -2px 2px black;
 }
 
 .container-fluid {
